<resources>
    <string name="app_name">Pinpoint</string>
    <string name="title_activity_maps">Pinpoint</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="google_status_fmt">User: %s</string>
    <string name="google_title_text">PinPoint</string>
    <string name="Content">Find the Activities Nearby</string>
    <string name="disconnect">Disconnect</string>
    <string name="signed_out">Sign_Out</string>
    <string name="title_activity_google_sign_in">GoogleSignInActivity</string>
    <string name="label_google_sign_in">Firebase + Google Sign In</string>
    <string name="desc_google_sign_in">Use a Google Sign In credential to authenticate with Firebase.</string>
    <string name="desc_firebase_lockup">Firebase logo and name</string>
    <string name="loading">Loading…</string>
    <string name="firebase_status_fmt">Firebase User: %s</string>
    <string name="firebase_user_management">Firebase User Management</string>
    <string name="new_post_subject_hint">Subject</string>
    <string name="new_post_message_hint">Message</string>
    <string name="new_post_location_default">New Thread</string>
    <string name="Sign_Out">Sign Out</string>
    <string name="Get_Location">Get Location</string>
    <string name="Sign_In">Sign In</string>
    <string name="guest_sign_in">Sign in as guest</string>
</resources>
